# deepface-webapi

./: CHANGELOG.md  README.md  app.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build_and_test.yml  dockerhub-publish.yml  nuget-publish.yml
src/: main.py  persist_embedding.py
